- Removed global strict mode (it can break other scripts)

--- a/demo.html
+++ b/demo.html
@@ -17,7 +17,7 @@
             <p>Here is a demo of the script loading utility. Notice how the scripts don't load all at the same time. Also notice how scripts are not loaded in the same order since they load asynchronously (but if we request an array of more files they will be always loaded in the same order to make sure that the dependencies are loaded).</p>
             <div id="messages"></div>
         </div>
-        <script src="jsLoader.min.js"></script>
+        <script src="jsLoader.js"></script>
         <script>
             // add a message in div#messages
             function addMessage(str) {
